# ansible-role-chrony

./: .gitignore  .gitreview  README.rst  ansible-requirements.txt  ansible.cfg  install.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
files/: chrony-online.service
meta/: main.yml
tasks/: config.yml  install.yml  main.yml
vars/: RedHat.yml
zuul.d/: layout.yaml
