[metadata]
name = ansible-role-chrony
summary = ansible-role-chrony - Ansible chrony role
description-file =
    README.rst
author = TripleO Team
author-email = openstack-dev@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/ansible-role-chrony
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/chrony/defaults = defaults/*
    share/ansible/roles/chrony/meta = meta/*
    share/ansible/roles/chrony/tasks = tasks/*
    share/ansible/roles/chrony/templates = templates/*
    share/ansible/roles/chrony/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

